# CSGN

./: CMakeLists.txt  LICENSE  README.md  certFHE.h  main.cpp  readme  test.cpp
src/: ArgClasses.h  CADD.cpp  CADD.h  CCC.cpp  CCC.h  CMUL.cpp  CMUL.h  CNODE.cpp  CNODE.h  CNODE_disjoint_set.cpp  CNODE_disjoint_set.h  CNODE_list.cpp  CNODE_list.h  COP.cpp  COP.h  CUDA_interface.cu  CUDA_interface.h  Ciphertext.cpp  Ciphertext.h  Context.cpp  Context.h  GlobalParams.cpp  GlobalParams.h  Helpers.cpp  Helpers.h  LICENSE  Permutation.cpp  Permutation.h  Plaintext.cpp  Plaintext.h  SecretKey.cpp  SecretKey.h  Threadpool.h  Timer.cpp  Timer.h  certFHE.h  examples.cpp  readme  utils.h
tests/: basic_operations.cpp  permutations.cpp  timings.cpp
